--- a/style.css
+++ b/style.css
@@ -1,65 +1,544 @@
-*{
-    font-family: 'roboto', sans-serif;
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;;
 }
 
-*{
-    margin: 0;
-    padding: 0;
+:root {
+  --d-gray: #3c3b3d;
+  --l-gray: #8e8e8e;
+  --lt-gray: #dfdfdf;
+  --g-white: #e9e9e9;
 }
 
-/* --Navigation Bar-- */
+/* Navbar desktop */
 nav {
-    display: flex;
-    justify-content: space-between;
-    justify-items: center;
-    align-items: center;
-    padding: 24px;
+  display: flex;
+  justify-content: space-between;
+  justify-items: center;
+  align-items: center;
+  padding: 24px 32px;
+  height: 64px;
 }
 
 nav > ul {
-    display: flexs;
-    list-style: none;
-    align-items: center;
+  display: flex;
+  list-style: none;
+  align-items: center;
+}
+
+nav li {
+  padding: 0.5em 0.5em;
 }
 
 nav a {
-    text-decoration: dashed;
-    color:black;
+  text-decoration: none;
+  color: var(--d-gray);
 }
 
-.logo-container {
-    display: flex;
-    align-items: center;
-    text-transform: uppercase;
-    padding-left: 24px;
-    font-size: 1.1rem;
+.logo {
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
+  font-size: 1.5rem;
 }
 
-.logo-name {
-    color: hsl(0,0%,64%);
-    font-weight: 400;
-    letter-spacing: 0.5px;
+.logo > img {
+  min-height: 3.25rem;
+  max-height: 3.25rem;
+  transform: translateY(8%);
 }
 
-.logo-name > span {
-    font-weight: 700;
-    color: hsl(0,0%,29%);
+.logo > p {
+  display: inline;
+  font-weight: bold;
+  color: var(--d-gray);
 }
 
-.nav-link-container {
-    display: flex;
-    gap: 1rem;
+.logo > span {
+  font-weight: medium;
+  padding: 32px 0px 24px;
+  color: var(--l-gray);
 }
 
-/* Mobile Navigation Bar */
+.mobile-nav {
+  display: none;
+}
 
-.mobile-nav{
+/* Hero Section */
+
+.hero-container {
+  background-color: var(--lt-gray);
+  display: flex;
+  
+}
+
+.hero-container button:hover {
+  background-color: var(--d-gray);
+}
+
+.hero-container button {
+  background-color: var(--l-gray);
+  width: 100%;
+  height: 3rem;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  cursor: pointer;
+  color: white;
+  border: none;
+}
+
+.hero-left {
+  width: 100%;
+  padding: 32px 24px;
+}
+
+.hero-left img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.hero-right {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.hero-right > h1,
+h4 {
+  color: var(--d-gray);
+  font-size: 2rem;
+  line-height: 2.6rem;
+  padding-bottom: 5%;
+}
+.hero-right > h1 {
+  font-weight: bold;
+  font-size: 2.5em;
+}
+.hero-right > h4 {
+  font-weight: 400;
+  font-size: 1.5em;
+}
+
+.hero-right a {
+  color: white;
+  text-decoration: none;
+}
+
+/* Info Section */
+
+.info-container {
+  display: grid;
+  grid-template-columns: 3fr 3fr;
+  color: var(--d-gray);
+}
+/* Info - left */
+.info-left {
+  display: flex;
+  flex-direction: column;
+  padding: 32px 24px;
+}
+
+.info-left img {
+  width: 100%;
+}
+
+.info-left-title {
+  padding-bottom: 2%;
+}
+
+.info-left-title h2 {
+  font-size: 1.3em;
+}
+
+.info-left-title h2,
+p {
+  color: var(--d-gray);
+  padding-top: 32px;
+  padding-bottom: 24px;
+}
+
+.info-left-title p {
+  font-size: 1em;
+  /* letter-spacing: -1px; */
+  font-weight: 100;
+  color: var(--l-gray);
+}
+
+/* Info-Right */
+
+.info-right {
+  display: flex;
+  flex-direction: column;
+  padding: 32px 0;
+}
+
+.info-right img {
+  width: 10rem;
+}
+
+.info-right h4 {
+  font-size: 1.5em;
+}
+
+.info-right button {
+  background: none;
+  border: 0;
+}
+
+.info-right a {
+  text-decoration: none;
+  padding: 4px 0;
+}
+
+.orientation,
+.campus,
+.guest {
+  display: flex;
+  border: 1px solid var(--lt-gray);
+  padding: 16px;
+}
+
+.orientation-info,
+.campus-info,
+.guest-info {
+  padding: 0 5%;
+  margin-top: 4%;
+  font-size: 80%;
+}
+
+.orientation-info > *,
+.campus-info > *,
+.guest-info > * {
+  padding: 4px 0;
+}
+
+.guest:hover,
+.campus:hover,
+.orientation:hover {
+  background-color: var(--lt-gray);
+  cursor: pointer;
+}
+
+/* Hidden Mobile Images */
+.orientation-left-mobile,
+.campus-left-mobile,
+.guest-left-mobile {
+  display: none;
+}
+
+/* Couses Section */
+
+.c-container {
+  background-color: var(--g-white);
+  padding: 32px 72px;
+}
+
+.c-container > h1 {
+  font-size: 2.5em;
+  font-weight: 700;
+  text-align: center;
+  color: var(--d-gray);
+  padding-bottom: 32px;
+}
+
+/* Learning grid */
+
+.c-grid-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 32px;
+}
+
+.c-grid-wrapper img {
+  width: 100%;
+}
+
+.c-grid-wrapper > * {
+  display: flex;
+  flex-direction: column;
+}
+
+.c-info {
+  background-color: white;
+  padding: 16px 16px 16px;
+  height: 80%;
+}
+
+.c-info:hover {
+  background-color: var(--g-white);
+  cursor: pointer;
+}
+
+.c-info > h4 {
+  font-size: 1.5em;
+  color: var(--d-gray);
+}
+
+.c-info > * {
+  padding: 2% 0;
+}
+
+.c-info > p {
+  font-size: medium;
+  padding: 4px 4px;
+  color: var(--l-gray);
+}
+
+.sl-mobile {
+  display: none;
+}
+
+/* Thesis Section */
+.thesis-container > h1 {
+  color: var(--d-gray);
+  text-align: center;
+  padding: 32px 0;
+  font-size: 2.5em;
+  font-weight: 700;
+}
+
+.thesis-grid {
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+}
+
+/* Urban */
+.urban-container {
+  display: flex;
+  flex-direction: column;
+  padding: 0 24px 24px 24px;
+}
+
+.urban-video > video {
+  width: 100%;
+}
+
+.urban-info {
+  padding: 1% 0 5% 0;
+}
+
+.urban-info > * {
+  padding: 1% 0;
+}
+
+.urban-info > p {
+  font-size: small;
+  color: var(--l-gray);
+}
+
+/* Other thesis */
+
+.other-thesis-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.other-thesis-container img {
+  width: 10rem;
+}
+
+.other-thesis-container p {
+  font-size: small;
+  color: var(--l-gray);
+}
+
+.other-thesis-container h4 {
+  font-size: medium;
+  color: var(--d-gray);
+}
+
+.fisma,
+.now-and-then {
+  display: flex;
+  padding: 16px;
+}
+
+.fisma:hover,
+.now-and-then:hover {
+  background-color: var(--g-white);
+  cursor: pointer;
+}
+
+.fisma-info,
+.nt-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.fisma-info > *,
+.nt-info > * {
+  padding: 1%;
+  margin: 5% 8%;
+}
+/* Footer Section */
+footer {
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid var(--l-gray);
+  margin-bottom: 1%;
+}
+
+footer > * {
+  font-size: small;
+  color: var(--d-gray);
+  margin-top: 0;
+  padding-top: 0.5%;
+}
+
+footer ul {
+  display: flex;
+  list-style: none;
+}
+
+footer a {
+  text-decoration: none;
+  color:var(--l-gray);;
+}
+
+footer p {
+  text-decoration: none;
+  color:var(--l-gray);;
+}
+
+footer li {
+  padding: 0 1em;
+}
+
+/* Mobile media query */
+
+@media only screen and (max-width: 580px) {
+  /* Navbar */
+  nav > .logo,
+  nav > ul {
     display: none;
-}
+  }
 
-main {
-    max-width: 90rem;
-    margin: 0 auto;
+  .mobile-nav {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    align-items: center;
+    grid-gap: 70%;
+    margin: 2% 3%;
+  }
+
+  /* Hero Section Mobile */
+  .hero-container {
+    flex-direction: column;
+    padding: 0;
+  }
+  .hero-container img {
+    width: 100%;
+  }
+
+  .hero-right {
+    padding: 32px 16px;
+  }
+
+  .hero-right button {
+    background-color: var(--l-gray);
+    border: none;
+    font-size: 100%;
+  }
+
+  /* Info Section Mobile */
+  .info-left {
+    display: none;
+  }
+
+  .info-container {
+    grid-template-columns: 1fr;
+  }
+
+  .info-right {
+    padding: 0;
+  }
+
+  .info-right > * {
+    display: flex;
+    flex-direction: column;
+    font-size: 120%;
+  }
+
+  .orientation-left-desktop,
+  .campus-left-desktop,
+  .guest-left-desktop {
+    display: none;
+  }
+
+  .info-right img {
+    width: 100%;
+  }
+
+  .orientation-left-mobile,
+  .campus-left-mobile,
+  .guest-left-mobile {
+    display: inline;
+  }
+
+  .guest {
+    background-color: white;
+  }
+
+  /* Couses Section Mobile */
+  .c-container {
+    background-color: white;
+    padding: 16px 16px 0px 16px;
+  }
+
+  .c-container > h1 {
+    padding: 32px 0;
+  }
+
+  .c-grid-wrapper {
+    display: none;
+  }
+
+  .sl-mobile {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sl-mobile > * {
+    background-color: var(--g-white);
+    color: var(--d-grey);
+    height: 5rem;
+    margin: 1%;
+    text-decoration: none;
+  }
+
+  .sl-mobile h1 {
+    padding: 5%;
+  }
+
+  /* Uban Video */
+  .urban-container {
+    padding: 0px;
+  }
+
+  /* Thesis */
+  .urban-info,
+  .other-thesis-container {
+    display: none;
+  }
+
+  .thesis-grid {
+    grid-template-columns: 1fr;
+  }
+
+  /* Footer Section Mobile */
+  footer {
+    padding: 10% 0 2%;
+  }
+
+  footer ul {
+    display: none;
+  }
+
+  footer p {
+    font-size: 100%;
+    font color: var(--l-gray);
+  }
 }
